--- a/src/i18n/locales/vi-translation.json
+++ b/src/i18n/locales/vi-translation.json
@@ -7,6 +7,10 @@
 		"code": "Mã nhân viên",
 		"dob": "Ngày sinh",
 		"phone": "Số điện thoại",
+		"position": "Vị trí",
+		"role": "Vai trò",
+		"parent_department": "Phòng ban lớn",
+		"children_department": "Phòng ban nhỏ",
 		"name": "Tên",
 		"email": "Email",
 		"date_join_company": "Ngày vào công ty",
