--- a/src/i18n/locales/en-translation.json
+++ b/src/i18n/locales/en-translation.json
@@ -9,8 +9,7 @@
 		"phone": "Phone",
 		"position": "Position",
 		"role": "Role",
-		"parent_department": "Parent Department",
-		"children_department": "Children Department",
+		"department": "Department",
 		"name": "Name",
 		"email": "Email",
 		"date_join_company": "Date join company",
