--- a/src/i18n/locales/vi-translation.json
+++ b/src/i18n/locales/vi-translation.json
@@ -9,7 +9,7 @@
 		"phone": "Số điện thoại",
 		"position": "Vị trí",
 		"role": "Vai trò",
-		"department": "Phòng ban",
+		"department": "Bộ phận/Phòng ban",
 		"name": "Tên",
 		"email": "Email",
 		"date_join_company": "Ngày vào công ty",
