--- a/src/i18n/locales/vi-translation.json
+++ b/src/i18n/locales/vi-translation.json
@@ -1,9 +1,17 @@
 {
-    "welcome": "Chào mừng",
-    "about": "Về chúng tôi",
+	"add": "Thêm",
+	"edit": "Sửa",
+	"update": "Cập nhật",
+	"submit": "Xác nhận",
+
+	"org_chart_page": {
+		"loading": "Đang tải...",
+		"select": "Chọn",
+		"select_department": "Chọn phòng ban"
+	},
 
 	"home_page": {
-		"home_page": "Trang chủ",
+		"title": "Trang chủ",
 		"code": "Mã nhân viên",
 		"dob": "Ngày sinh",
 		"phone": "Số điện thoại",
@@ -26,50 +34,48 @@
 	},
 
 	"header": {
-		"hi": "Hi",
-		"my_account": "Cá nhân",
 		"change_password": "Đổi mật khẩu",
 		"log_out": "Đăng xuất"
 	},
 
 	"sidebar": {
 		"home": "Trang chủ",
-		"admin": {
-			"admin": "Quản trị",
+		"hr": {
 			"role": "Vai trò",
-			"department": "Phòng ban",
-			"position": "Chức vụ",
-			"team": "Nhóm"
-		},
-		"user": {
-			"user": "Người dùng",
-			"create": "Thêm người dùng",
-			"list": "Danh sách người dùng"
+			"type_leave": "Loại phép",
+			"list_user": "Danh sách người dùng",
+			"org": "Sơ đồ tổ chức"
 		},
 		"leave_request": {
-			"leave_request": "Nghỉ phép",
-			"create": "Xin nghỉ phép",
-			"list": "Danh sách nghỉ"
+			"title": "Nghỉ phép",
+			"create_leave": "Xin nghỉ phép",
+			"list_leave": "Danh sách nghỉ",
+			"wait_approval": "Chờ duyệt"
 		}
 	},
-	
-	"change_password": {
-		"change_password": "Đổi mật khẩu",
-		"new_password": "Mật khẩu mới",
-		"confirm_password": "Xác nhận mật khẩu mới"
+
+	"login_page": {
+		"title": "Đăng nhập",
+		"usercode": "Mã nhân viên",
+		"password": "Mật khẩu"
 	},
 
-	"profile": {
-		"profile": "Cá nhân",
-		"name": "Tên",
-		"code": "Mã nhân viên",
-		"email": "Email",
-		"date_join_company": "Ngày vào công ty"
+	"register_page": {
+		"title": "Đăng ký",
+		"usercode": "Mã nhân viên",
+		"password": "Mật khẩu"
+	},
+	
+	"change_password_page": {
+		"title": "Đổi mật khẩu",
+		"new_password": "Mật khẩu mới",
+		"confirm_password": "Xác nhận mật khẩu mới"
 	},
 
 	"leave_request": {
 		"create": {
 			"title": "Xin nghỉ phép",
+			"receive_email": "Nhận thông báo qua email",
 			"link_to_list": "Danh sách nghỉ",
 			"department": "Phòng ban",
 			"code": "Mã nhân viên",
@@ -99,13 +105,62 @@
 			"reason": "Lý do"
 		}
 	},
-
-	"user": {
-		"create": {
-			"create": "Thêm mới"
-		},
-		"list": {
-			"list": "Danh sách"
-		}
+	"list_user_page": {
+		"title": "Danh sách người dùng",
+		"search": "Tìm kiếm",
+		"usercode": "Mã nhân viên",
+		"name": "Tên",
+		"department": "Bộ phận",
+		"position": "Chức vụ",
+		"sex": "Giới tính",
+		"phone": "SĐT",
+		"email": "Email",
+		"date_join_company": "Ngày vào CT",
+		"action": "Hành động"
+	},
+	"type_leave_page": {
+		"title": "Loại phép",
+		"btn_create_type_leave": "Thêm loại phép",
+		"search": "Tìm kiếm",
+		"name": "Tên",
+		"modified_at": "Sửa lúc",
+		"modified_by": "Người sửa",
+		"action": "Hành động",
+		"btn_update_type_leave": "Sửa loại phép"
+	},
+	"list_role_page": {
+		"title": "Vai trò",
+		"btn_create_role": "Thêm mới",
+		"search": "Tìm kiếm",
+		"name": "Tên",
+		"code": "Mã",
+		"action": "Hành động",
+		"btn_update_role": "Cập nhật"
+	},
+	"list_leave_request": {
+		"title_wait_approval": "Chờ duyệt",
+		"title_list": "Danh sách nghỉ",
+		"btn_create_leave_request": "Xin nghỉ phép",
+		"pending": "Đang chờ",
+		"in_process": "Đang xử lý",
+		"complete": "Hoàn thành",
+		"reject": "Từ chối",
+		"usercode": "Mã nhân viên",
+		"name": "Tên",
+		"department": "Bộ phận",
+		"position": "Chức vụ",
+		"from": "Từ",
+		"to": "Đến",
+		"type_leave": "Loại phép",
+		"time_leave": "Thời gian",
+		"reason": "Lý do",
+		"approve_by": "Người duyệt",
+		"created_at": "Thời gian duyệt",
+		"status": "Trạng thái",
+		"reject_by": "Từ chối",
+		"reject_at": "Thời gian",
+		"no_result": "Không có kết quả",
+		"note": "Ghi chú",
+		"approval": "Duyệt"
 	}
 }
