--- a/src/i18n/locales/en-translation.json
+++ b/src/i18n/locales/en-translation.json
@@ -155,8 +155,9 @@
 		"type_leave": "Type leave",
 		"time_leave": "Time leave",
 		"reason": "Reason",
+		"created_at": "Created At",
 		"approve_by": "Approved By",
-		"created_at": "Approved At",
+		"approved_at": "Approved At",
 		"status": "Status",
 		"reject_by": "Rejected By",
 		"reject_at": "Rejected At",
