--- a/src/i18n/locales/vi-translation.json
+++ b/src/i18n/locales/vi-translation.json
@@ -154,8 +154,9 @@
 		"type_leave": "Loại phép",
 		"time_leave": "Thời gian",
 		"reason": "Lý do",
+		"created_at": "Thời gian tạo",
 		"approve_by": "Người duyệt",
-		"created_at": "Thời gian duyệt",
+		"approved_at": "Thời gian duyệt",
 		"status": "Trạng thái",
 		"reject_by": "Từ chối",
 		"reject_at": "Thời gian",
