--- a/src/i18n/locales/vi-translation.json
+++ b/src/i18n/locales/vi-translation.json
@@ -50,7 +50,7 @@
 		},
 		"union": {
 			"union": "Công đoàn",
-			"create_notify": "Tạo thông báo"
+			"create_notify": "Truyền thông nội bộ"
 		},
 		"leave_request": {
 			"title": "Nghỉ phép",
