--- a/src/i18n/locales/en-translation.json
+++ b/src/i18n/locales/en-translation.json
@@ -52,9 +52,12 @@
 			"mng_time_keeping": "Mng Timekeeping",
 			"mng_leave_request": "Mng Leave Request"
 		},
-		"union": {
-			"union": "Union",
-			"create_notify": "Internal Communication"
+		"notification": {
+			"title": "Notification",
+			"create": "Create notification",
+			"list": "List notification",
+			"wait_approval": "Wait approval",
+			"history_approval": "History approval"
 		},
 		"leave_request": {
 			"title": "Leave request",
@@ -255,6 +258,11 @@
 	},
 	"memo_notification": {
 		"list": {
+			"approved_by": "Approved By",
+			"approved_at": "Approved At",
+			"approval_status": "Approval Status",
+			"wait_approval": "Wait approval",
+			"history_approval": "History approval",
 			"title_page": "List memo notify",
 			"btn_create_memo_notify": "Create memo notify",
 			"title": "Title",
@@ -266,7 +274,8 @@
 			"created_by": "Created by",
 			"action": "Action",
 			"btn_save": "Save",
-			"attachments": "Attach file"
+			"attachments": "Attach file",
+			"view": "View"
 		}
 	}
 }
