--- a/src/i18n/locales/en-translation.json
+++ b/src/i18n/locales/en-translation.json
@@ -275,7 +275,8 @@
 			"action": "Action",
 			"btn_save": "Save",
 			"attachments": "Attach file",
-			"view": "View"
+			"view": "View",
+			"note": "Note"
 		}
 	}
 }
