--- a/src/i18n/locales/vi-translation.json
+++ b/src/i18n/locales/vi-translation.json
@@ -56,7 +56,7 @@
 			"title": "Thông báo",
 			"create": "Tạo thông báo",
 			"list": "Danh sách thông báo",
-			"wait_approval": "Chờ duyệt",
+			"wait_approval": "Duyệt thông báo",
 			"history_approval": "Đã duyệt"
 		},
 		"leave_request": {
@@ -257,9 +257,9 @@
 	},
 	"memo_notification": {
 		"list": {
-			"approved_by": "Người duyệt",
+			"approved_by": "Người đã duyệt",
 			"approved_at": "Thời gian duyệt",
-			"approval_status": "Trạng thái hiện tại",
+			"approval_status": "Trạng thái phê duyệt",
 			"wait_approval": "Chờ duyệt",
 			"history_approval": "Đã duyệt",
 			"title_page": "Danh sách thông báo",
@@ -274,7 +274,8 @@
 			"action": "Hành động",
 			"btn_save": "Lưu",
 			"attachments": "Đính kèm file",
-			"view": "Xem"
+			"view": "Xem",
+			"note": "Ghi chú"
 		}
 	}
 }
