--- a/src/i18n/locales/en-translation.json
+++ b/src/i18n/locales/en-translation.json
@@ -50,7 +50,8 @@
 			"list_user": "List user",
 			"org": "Organizational chart",
 			"mng_time_keeping": "Mng Timekeeping",
-			"mng_leave_request": "Mng Leave Request"
+			"mng_leave_request": "Mng Leave Request",
+			"change_org_unit_id_user": "Change org unit"
 		},
 		"notification": {
 			"title": "Notification",
