--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -1,5 +1,13 @@
 {
     "all_day": "All Day",
     "morning": "Morning",
-    "afternoon": "Afternoon"   
+    "afternoon": "Afternoon",
+    "usercode": "Usercode",
+    "name": "Name",
+    "email": "Email",
+    "department": "Department",
+    "save": "Save",
+    "reason": "Reason",
+    "note": "Note",
+    "cancel": "Cancel"
 }
