--- a/src/i18n/locales/vi-translation.json
+++ b/src/i18n/locales/vi-translation.json
@@ -55,31 +55,29 @@
 		},
 		"notification": {
 			"title": "Thông báo",
-			"create": "Tạo thông báo",
-			"list": "Danh sách thông báo",
-			"wait_approval": "Duyệt thông báo",
-			"history_approval": "Đã duyệt"
+			"create": "Tạo mới thông báo",
+			"list": "Danh sách thông báo đã tạo"
 		},
 		"leave_request": {
-			"title": "Nghỉ phép",
+			"title": "Nghỉ phép, chấm công",
 			"create_leave": "Xin nghỉ phép",
 			"create_leave_for_others" : "Xin nghỉ phép thay người khác",
-			"list_leave": "Danh sách nghỉ",
-			"wait_approval": "Chờ duyệt",
-			"history_approved": "Lịch sử duyệt"
-		},
-		"time_keeping": {
+			"list_leave": "Danh sách nghỉ phép đã tạo",
 			"time_keeping": "Chấm công",
 			"mng_time_keeping": "Quản lý chấm công"
 		},
 		"IT": {
 			"title": "IT",
 			"statistical": "Thống kê",
-			"create": "Tạo đơn mới",
+			"create": "Tạo yêu cầu mới",
 			"list": "Danh sách đơn đã tạo",
-			"wait_approval": "Chờ duyệt",
-			"history_approval": "Các đơn đã duyệt",
 			"setting": "Cài đặt"
+		},
+		"approval": {
+			"title": "Phê duyệt",
+			"pending_approval": "Chờ duyệt",
+			"assigned": "Được giao",
+			"history_approval": "Đã duyệt/xử lý xong"
 		}
 	},
 
