--- a/src/i18n/locales/en-translation.json
+++ b/src/i18n/locales/en-translation.json
@@ -74,7 +74,7 @@
 			"setting": "Setting"
 		},
 		"approval": {
-			"title": "Approved",
+			"title": "Approval",
 			"pending_approval": "Pending approval",
 			"assigned": "Assigned",
 			"history_approval": "Approved/Processed"
